--- a/views/actions.handlebars
+++ b/views/actions.handlebars
@@ -1,18 +1,58 @@
-<div class="row">
-    <h1>Actions</h1>
+<!DOCTYPE html>
+<html>
 
-    <table>
-        <tr>
-        <th>Type</th>
-        <th>Price</th>
-        <th>When</th>
-        </tr>
-        {{#each actions}}
-        <tr>
-            <td>{{type}}</td>
-            <td>{{cost}}</td>
-            <td>{{ago}}</td>
-        </tr>
-        {{/each}}
-    </table>
-</div>
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148918492-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-148918492-1');
+    </script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5KQQW38');</script>
+    <!-- End Google Tag Manager -->
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KQQW38" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <div class="container">
+        <div class="row">
+            <h1>Actions</h1>
+
+            <table>
+                <tr>
+                    <th>Type</th>
+                    <th>Price</th>
+                    <th>When</th>
+                </tr>
+                {{#each actions}}
+                <tr>
+                    <td>{{type}}</td>
+                    <td>{{cost}}</td>
+                    <td>{{ago}}</td>
+                </tr>
+                {{/each}}
+            </table>
+        </div>
+    </div>
+
+</body>
+
+</html>
