--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,85 +1,119 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
 
-        <div class="twelve columns box">
-          <h3>Bill with settings</h3>
-          <div class="">
-            Select the call or sms radio button. Update the appropriate total and the overall total when the ADD button in pressed.
-            <i>Calls costs should now be configurable using the settings section.</i>
-          </div>
-          <div class="">
-            <i>If the total cost exceed the warning level show the total cost in orange, if it exceeds the critical level show it in red and prevent any new costs from being added. The  warning and critical level should both be configurable now.</i>
-          </div>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148918492-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-          <hr>
+    gtag('config', 'UA-148918492-1');
 
-          <div class="row">
+  </script>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5KQQW38');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-            <div class="six columns">
-              <h5>Bill type</h5>
-              <form action="/action" method="POST">
-                <label class="">
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5KQQW38" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div class="container">
+    <div class="row">
+
+      <div class="twelve columns box">
+        <h3>Bill with settings</h3>
+        <div class="">
+          Select the call or sms radio button. Update the appropriate total and the overall total when the ADD button in
+          pressed.
+          <i>Calls costs should now be configurable using the settings section.</i>
+        </div>
+        <div class="">
+          <i>If the total cost exceed the warning level show the total cost in orange, if it exceeds the critical level
+            show it in red and prevent any new costs from being added. The warning and critical level should both be
+            configurable now.</i>
+        </div>
+
+        <hr>
+
+        <div class="row">
+
+          <div class="six columns">
+            <h5>Bill type</h5>
+            <form action="/action" method="POST">
+              <label class="">
                 <input type="radio" name="actionType" value="call" class="billItemTypeWithSettings">
                 <span class="label-body">Call</span>
               </label>
               <label class="">
                 <input type="radio" name="actionType" value="sms" class="billItemTypeWithSettings">
-                <span class="label-body" >SMS</span>
+                <span class="label-body">SMS</span>
               </label>
               <button class="button-primary" type="submit" name="button">Add</button>
 
-              </form>
-              <h5>Totals</h5>
-                  <table>
-                    <tr>
-                      <td>
-                        <a href="/actions/call">Call total</a>
-                      </td>
-                      <td>R<span class="callTotalSettings">{{totals.callTotal}}</span> </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <a href="/actions/sms">SMS total</a>
-                      </td>
-                      <td>R<span class="smsTotalSettings">{{totals.smsTotal}}</span> </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <a href="/actions">Total</a>
-                      </td>
-                      <td> R<span class="totalSettings {{color}}">{{totals.grandTotal}}</span> </td>
-                    </tr>
-                  </table>
+            </form>
+            <h5>Totals</h5>
+            <table>
+              <tr>
+                <td>
+                  <a href="/actions/call">Call total</a>
+                </td>
+                <td>R<span class="callTotalSettings">{{totals.callTotal}}</span> </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="/actions/sms">SMS total</a>
+                </td>
+                <td>R<span class="smsTotalSettings">{{totals.smsTotal}}</span> </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="/actions">Total</a>
+                </td>
+                <td> R<span class="totalSettings {{color}}">{{totals.grandTotal}}</span> </td>
+              </tr>
+            </table>
 
-            </div>
-            <div class="six columns">
-              <h5>Settings</h5>
-              <form action="/settings" method="POST">
-                <label for="exampleEmailInput">Call cost</label>
-              <input class="u-full-width callCostSetting" type="number" name="callCost" step=".01" placeholder="eg. 2.55" value="{{setting.callCost}}">
+          </div>
+          <div class="six columns">
+            <h5>Settings</h5>
+            <form action="/settings" method="POST">
+              <label for="exampleEmailInput">Call cost</label>
+              <input class="u-full-width callCostSetting" type="number" name="callCost" step=".01"
+                placeholder="eg. 2.55" value="{{setting.callCost}}">
               <label for="exampleEmailInput">SMS cost</label>
-              <input class="u-full-width smsCostSetting" type="number" name="smsCost" step=".01" placeholder="eg. 0.65" value="{{setting.smsCost}}">
+              <input class="u-full-width smsCostSetting" type="number" name="smsCost" step=".01" placeholder="eg. 0.65"
+                value="{{setting.smsCost}}">
               <label for="">Warning level</label>
-              <input class="u-full-width warningLevelSetting " type="number" name="warningLevel" step=".01" placeholder="eg. 30.00" class="warningLevel" value="{{setting.warningLevel}}" >
+              <input class="u-full-width warningLevelSetting " type="number" name="warningLevel" step=".01"
+                placeholder="eg. 30.00" class="warningLevel" value="{{setting.warningLevel}}">
               <label for="">Critical level</label>
-              <input class="u-full-width criticalLevelSetting" type="number" name="criticalLevel" step=".01" placeholder="eg. 65.00" value="{{setting.criticalLevel}}">
+              <input class="u-full-width criticalLevelSetting" type="number" name="criticalLevel" step=".01"
+                placeholder="eg. 65.00" value="{{setting.criticalLevel}}">
               <button class="button-primary updateSettings" type="submit" name="button">Update settings</button>
 
-              </form>
-            </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-    
-  </body>
+  </div>
+
+</body>
+
 </html>
